--- a/home.css
+++ b/home.css
@@ -4,19 +4,39 @@
     box-sizing: border-box;
 }
 
-header {
-    border: 1px solid black;
+html {
+    height: 100%;
+}
+
+body {
+    min-height: 10vh;
+    display: flex;
+    flex-direction: column;
+    background: #1c1c1c;
+    color: #fff;
+}
+
+.header-container {
     display: flex;
     width: 100%;
     align-items: center;
-    justify-content: center;
+    justify-content: space-between;
+    border-bottom: 1px solid #fff;
+    padding-top: 20px;
+    padding-bottom: 10px;
+    margin-bottom: 15px;
+}
+
+.logo-container {
+    justify-content: space-around;
+    align-items: center;
+    margin-left: 20px;
 }
 
 .logo {
     display: flex;
     align-items: center;
     justify-content: center;
-    float: left;
 }
 
 .navbar {
@@ -44,3 +64,39 @@ header {
     text-align: center;
     justify-content: center;
 }
+
+.footer-container {
+    margin-top: 5px;
+    padding: 20px;
+    border-top: 1px solid #fff;
+}
+
+footer h3, 
+footer p{
+    text-align: center;   
+}
+
+
+.footer-nav {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0;
+}
+
+.footer-nav ul {
+    list-style-type: none;
+    display: flex;
+}
+
+.footer-nav a {
+    text-decoration: none;
+    padding: 15px;
+    display: block;
+    text-align: center;
+    justify-content: center;
+}
+
+
+
